Text highlighting bug fixed (incorrect highlighting insertion)

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,8 +10,8 @@
 <script src="../src/text-doc.js"></script>
 <script>
     var textdoc = document.getElementById('textdoc');
-    textdoc.addHighlight(0, 10);
-    //textdoc.addHighlight(10, 20, '#00BFFF');
+    textdoc.addHighlight(3, 7);
+    textdoc.addHighlight(10, 20, '#00BFFF');
 </script>
 </body>
 </html>
